--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Hallo!</h1>
+<app-menu></app-menu>
+
+<img class="img-slideshow" src="assets/img/testbild1.jpg">
+
+<app-latestwork></app-latestwork>
+
+<app-footer></app-footer>
