add new components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-menu></app-menu>
 
-<img class="img-slideshow" src="assets/img/testbild1.jpg">
+<router-outlet></router-outlet>
 
 <app-latestwork></app-latestwork>
 
