--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,17 +1,21 @@
-<header class="header">
-    <div class="logo"><img class="img-weblogo" src="assets/img/testlogo.png"></div>
-    <nav class="nav">
-        <a>ABOUT</a>
-        <a>PORTFOLIO</a>
-        <a>BLOG</a>
-        <a>CONTACT</a>
-    </nav>
+<div id="top">
 
-    <div class="followme">
-        <div class="followme-icon"><img class="img-logo" src="assets/img/twitter-64.png"></div>
-        <div class="followme-icon"><img class="img-logo" src="assets/img/linkedin-64.png"></div>
-        <div class="followme-icon"><img class="img-logo" src="assets/img/facebook-64.png"></div>
-        <div class="followme-icon"><img class="img-logo" src="assets/img/instagram-64.png"></div>
+    <header class="header">
+        <div class="logo"><img routerLink="/" class="img-weblogo" src="assets/img/testlogo.png"></div>
+        <nav class="nav">
+            <a routerLink="/aboutme">ABOUT</a>
+            <a routerLink="/portfolio">PORTFOLIO</a>
+            <!-- <a routerLink="/aboutme">BLOG</a> -->
+            <a routerLink="/contact">CONTACT</a>
+        </nav>
 
-    </div>
-</header>
+        <div class="followme">
+            <div class="followme-icon"><img class="img-logo" src="assets/img/twitter-64.png"></div>
+            <div class="followme-icon"><img class="img-logo" src="assets/img/linkedin-64.png"></div>
+            <div class="followme-icon"><img class="img-logo" src="assets/img/facebook-64.png"></div>
+            <div class="followme-icon"><img class="img-logo" src="assets/img/instagram-64.png"></div>
+
+        </div>
+    </header>
+
+</div>
