--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -18,11 +18,26 @@
     height: 50px;
     width: 50px;
     object-fit: cover;
+    cursor: pointer;
+    &:hover {
+        height: 60px;
+        width: 60px;
+    }
 }
 
 .footer {
     background-color: rgba(211, 211, 211, 0.466);
     height: 100px;
+    a {
+        color: darkgray;
+        margin-left: 5px;
+        margin-right: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        &:hover {
+            color: black;
+        }
+    }
 }
 
 .footer-content {
@@ -32,28 +47,10 @@
     margin-left: 100px;
     margin-right: 100px;
     height: 100px;
-    a {
-        color: darkgray;
-        margin-left: 5px;
-        margin-right: 5px;
-        cursor: pointer;
-        &:hover {
-            color: black;
-        }
-    }
 }
 
 .footer-links {
     display: flex;
     width: 300px;
     justify-content: space-evenly;
-    a {
-        color: darkgray;
-        margin-left: 5px;
-        margin-right: 5px;
-        cursor: pointer;
-        &:hover {
-            color: black;
-        }
-    }
 }
