--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -31,6 +31,7 @@
 .img-weblogo {
     height: 70px;
     width: 70px;
+    cursor: pointer;
 }
 
 .nav {
@@ -41,6 +42,8 @@
         margin-left: 5px;
         margin-right: 5px;
         cursor: pointer;
+        text-decoration: none;
+        color: white;
         &:hover {
             color: darkgray;
         }
