startet design on aboutme page

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,1 +1,48 @@
-<p>aboutme works!</p>
+<div class="header-aboutme">
+
+    <div class="header-content">
+        <h1>ABOUT ME.</h1> <br> I'm a developer based in Offenbach, <br> Germany <br> <br> I enjoy creating beautiful and intuitive designs. <br> When I'm not pushing pixels or write code, <br> you'll find me taking photo's, playing with my dog <br> or doing
+        do something creative .
+
+
+    </div>
+
+    <div class="header-img">
+
+        <img src="assets/img/testlogo.png">
+
+    </div>
+
+
+</div>
+
+<div class="table-container">
+    <table>
+        <td>
+            <div class="table-card">
+                <img src="assets/img/testbild1.jpg">
+            </div>
+        </td>
+
+        <td>
+            <div class="table-card">
+                <img src="assets/img/testbild1.jpg">
+            </div>
+        </td>
+
+        <td>
+            <div class="table-card">
+                <img src="assets/img/testbild1.jpg">
+            </div>
+        </td>
+
+        <td>
+            <div class="table-card">
+                <img src="assets/img/testbild1.jpg">
+            </div>
+        </td>
+    </table>
+
+</div>
+
+<div class="border"></div>
