add contact header and form

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,79 @@
-<p>contact works!</p>
+<div class="header-contact">
+
+    <div class="header-content">
+        <h1>CONTACT.</h1> <br> You are interessted. <br> <br> Don't be shy. <br> Write me.
+
+        <div class="contact-content">
+
+            <div class="contact">
+
+                <div class="contact-icon">
+                    <img src="assets/img/facebook-blue.png">
+                </div>
+                <h3>FACEBOOK</h3>
+            </div>
+
+            <div class="contact-right">
+                <div class="contact-icon">
+                    <img src="assets/img/facebook-blue.png">
+                </div>
+                <h3>FACEBOOK</h3>
+            </div>
+        </div>
+
+        <div class="contact-content">
+
+            <div class="contact">
+                <div class="contact-icon">
+                    <img src="assets/img/facebook-blue.png">
+                </div>
+                <h3>FACEBOOK</h3>
+            </div>
+
+            <div class="contact-right">
+                <div class="contact-icon">
+                    <img src="assets/img/facebook-blue.png">
+                </div>
+                <h3>FACEBOOK</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="header-img">
+
+        <img src="assets/img/testlogo.png">
+
+    </div>
+
+
+</div>
+
+<div class="border"></div>
+
+<div>
+
+    <form>
+        <div class="contact-information-left-side">
+            <div class="contact-information-box">
+                <label for="name">Name</label>
+                <input type="text" placeholder="Please write you first and last name">
+            </div>
+
+            <div class="contact-information-box">
+                <label for="name">Email address</label>
+                <input type="text" placeholder="Please write your email address">
+            </div>
+
+        </div>
+
+        <div class="contact-information-right-side">
+            <div class="contact-information-box">
+                <label for="name">Message</label>
+                <textarea type="text" placeholder="Please write your message">   
+              </div>
+
+        </div>
+    
+    </form>
+
+</div>
