--- a/src/app/slideshow/slideshow.component.html
+++ b/src/app/slideshow/slideshow.component.html
@@ -1,1 +1,44 @@
 <img class="img-slideshow" src="assets/img/testbild1.jpg">
+<div class="border"></div>
+<div class="latestwork-container">
+
+
+
+
+    <table class="latestwork">
+        <tr>
+            <td class="td-table-head">
+            </td>
+            <td class="td-table-headline">
+                Some of my latest work
+            </td>
+            <td class="td-table-head">
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                    <p class="project-titel">test-headline</p>
+                    <p class="project-description">test-description</p>
+                </div>
+
+            </td>
+            <td>
+                <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                    <p class="project-titel">test-headline</p>
+                    <p class="project-description">test-description</p>
+                </div>
+
+            </td>
+            <td>
+                <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                    <p class="project-titel">test-headline</p>
+                    <p class="project-description">test-description</p>
+                </div>
+
+            </td>
+        </tr>
+    </table>
+
+</div>
