--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,78 @@
-<p>portfolio works!</p>
+<div class="portfolio-container">
+    <div class="portfolio-header">
+        <div class="header-text">
+            <h1>PORTFOLIO.</h1><br> Check out some of my latest work and projects.
+
+        </div>
+        <div class="header-img">
+            <img src="assets/img/testlogo.png">
+        </div>
+
+    </div>
+
+    <div class="latestwork-container">
+        <table class="latestwork">
+            <tr>
+                <td class="td-table-head">
+                </td>
+                <td class="td-table-headline">
+                    Some of my latest work
+                </td>
+                <td class="td-table-head">
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                        <p class="project-titel">test-headline</p>
+                        <p class="project-description">test-description</p>
+                    </div>
+
+                </td>
+                <td>
+                    <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                        <p class="project-titel">test-headline</p>
+                        <p class="project-description">test-description</p>
+                    </div>
+
+                </td>
+                <td>
+                    <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                        <p class="project-titel">test-headline</p>
+                        <p class="project-description">test-description</p>
+                    </div>
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                        <p class="project-titel">test-headline</p>
+                        <p class="project-description">test-description</p>
+                    </div>
+
+                </td>
+                <td>
+                    <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                        <p class="project-titel">test-headline</p>
+                        <p class="project-description">test-description</p>
+                    </div>
+
+                </td>
+                <td>
+                    <div class="table-content"> <img class="project-img" src="assets/img/testbild1.jpg">
+                        <p class="project-titel">test-headline</p>
+                        <p class="project-description">test-description</p>
+                    </div>
+
+                </td>
+            </tr>
+        </table>
+
+    </div>
+
+
+
+</div>
