--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -50,30 +50,38 @@
 
 <div class="border"></div>
 
-<div>
+<div class="form-box">
 
-    <form>
+    <h2>Send me an email</h2>
+
+    <form action="">
         <div class="contact-information-left-side">
             <div class="contact-information-box">
                 <label for="name">Name</label>
-                <input type="text" placeholder="Please write you first and last name">
+                <input type="text" placeholder="Please write you first and last name.">
             </div>
 
             <div class="contact-information-box">
-                <label for="name">Email address</label>
-                <input type="text" placeholder="Please write your email address">
+                <label for="email">Email address</label>
+                <input type="text" placeholder="Please write your email address.">
             </div>
 
         </div>
 
         <div class="contact-information-right-side">
-            <div class="contact-information-box">
-                <label for="name">Message</label>
-                <textarea type="text" placeholder="Please write your message">   
-              </div>
+            <label for="message">Message</label>
+            <textarea type="text" placeholder="Please write your message."></textarea>
+            <div class="btn-box">
+                <button type="submit">Send email</button>
+            </div>
 
         </div>
-    
+
+
+
+
     </form>
+
+
 
 </div>
