--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -29,6 +29,61 @@
     background-color: #fafafa;
 }
 
+.form-box {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    form {
+        display: flex;
+        justify-content: space-between;
+    }
+    input {
+        width: 90%;
+        height: 25px;
+        border-radius: 5px;
+        border-color: lightgray;
+        padding: 15px;
+    }
+}
+
+.btn-box {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+    button {
+        height: 50px;
+        width: 215px;
+        border-radius: 5px;
+        border: none;
+        margin-right: -33px;
+        cursor: pointer;
+        background-color: #333333;
+        color: white;
+    }
+}
+
+.contact-information-box {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    width: 30vw;
+}
+
+.contact-information-right-side {
+    margin-left: 20px;
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    textarea {
+        width: 100%;
+        height: 125px;
+        border-radius: 5px;
+        border-color: lightgrey;
+        padding: 15px;
+    }
+}
+
 .contact {
     display: flex;
     align-items: center;
