--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,8 +1,9 @@
 <div class="header-aboutme">
 
     <div class="header-content">
-        <h1>ABOUT ME.</h1> <br> I'm a developer based in Offenbach, <br> Germany <br> <br> I enjoy creating beautiful and intuitive designs. <br> When I'm not pushing pixels or write code, <br> you'll find me taking photo's, playing with my dog <br> or doing
-        do something creative .
+        <h1>ABOUT ME.</h1>
+        <p>I'm a developer based in Offenbach, <br> Germany. <br> <br> I enjoy creating beautiful and intuitive designs. <br> When I'm not pushing pixels or write code, <br> you'll find me taking photo's, playing with my dog <br> or doing do something creative.
+        </p>
 
 
     </div>
@@ -47,5 +48,5 @@
 
 <div class="border"></div>
 <app-myskills></app-myskills>
-<div class="border"></div>
+
 <app-myjourney></app-myjourney>
