--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,23 +1,26 @@
 <div class="header-contact">
 
     <div class="header-content">
-        <h1>CONTACT.</h1> <br> You are interessted. <br> <br> Don't be shy. <br> Write me.
+        <h2>CONTACT.</h2>
+        <p>You are interessted. <br> <br> Don't be shy. <br> Write me.</p>
 
         <div class="contact-content">
 
             <div class="contact">
 
                 <div class="contact-icon">
-                    <img src="assets/img/facebook-blue.png">
+                    <a href="https://www.facebook.com/michelle.htz"> <img class="contact-icon" src="assets/img/facebook-contact.png"></a>
+
                 </div>
-                <h3>FACEBOOK</h3>
+                <p>FACEBOOK</p>
             </div>
 
             <div class="contact-right">
                 <div class="contact-icon">
-                    <img src="assets/img/facebook-blue.png">
+                    <a href="https://www.instagram.com/wassereis_momente/"> <img class="contact-icon" src="assets/img/instagram-contact.png"></a>
+
                 </div>
-                <h3>FACEBOOK</h3>
+                <p>INSTAGRAM</p>
             </div>
         </div>
 
@@ -25,16 +28,16 @@
 
             <div class="contact">
                 <div class="contact-icon">
-                    <img src="assets/img/facebook-blue.png">
+                    <img class="contact-icon" src="assets/img/linked-in-contact.png">
                 </div>
-                <h3>FACEBOOK</h3>
+                <p>LINKEDIN</p>
             </div>
 
             <div class="contact-right">
                 <div class="contact-icon">
-                    <img src="assets/img/facebook-blue.png">
+                    <img class="contact-icon" src="assets/img/twitter-contact.png">
                 </div>
-                <h3>FACEBOOK</h3>
+                <p>TWITTER</p>
             </div>
         </div>
     </div>
