--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,8 @@
 <div class="portfolio-container">
     <div class="portfolio-header">
         <div class="header-text">
-            <h1>PORTFOLIO.</h1><br> Check out some of my latest work and projects.
+            <h1>PORTFOLIO.</h1>
+            <p>Check out some of my latest work and projects.</p>
 
         </div>
         <div class="header-img">
